[workspace]
resolver = "3"
members = [
    "common",

    "no_durability_damage",
    "no_equip_load",
    "no_souls_loss",
]

[workspace.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_Foundation",
    ] }
winapi = {version = "0.3.9", features = [
    "processthreadsapi",
    "libloaderapi",
    "handleapi",
    ]}
region  = "3"



